--- a/Uni_Konstanz/Document Analysis/Lecture 1 + Tut1 + Ex 0 + 1/Ex0/ex00_assignment.ipynb
+++ b/Uni_Konstanz/Document Analysis/Lecture 1 + Tut1 + Ex 0 + 1/Ex0/ex00_assignment.ipynb
@@ -161,8 +161,7 @@
    "outputs": [],
    "source": [
     "def square(x):\n",
-    "    # Assignment XY: calculate the square here and return the value\n",
-    "    pass"
+    "    return x * x"
    ]
   },
   {
@@ -174,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,22 +190,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "16"
+       "256"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "square(4)"
+    "square(16)"
    ]
   },
   {
@@ -373,7 +372,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\# TEXT SUBMISSION ANSWER HERE (Double click to edit) - expected approx. 200-500 words"
+    "Provided files contain recorded by Tv operators Debates, reddit_dumb is just comments about debates and  .xml files are showing the exact speech between two parties."
    ]
   },
   {
@@ -394,19 +393,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# import the necessary library functions we prepared\n",
-    "from utils import create_word_cloud, read_lorem_ipsum_text"
+    "from utils import create_word_cloud, read_lorem_ipsum_text, read_xml"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'read_lorem_ipsum_text' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 14\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m#\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;66;03m# Part 1\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;66;03m#\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m     12\u001b[39m \u001b[38;5;66;03m# \u001b[39;00m\n\u001b[32m     13\u001b[39m \u001b[38;5;66;03m# Example:\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m14\u001b[39m loremipsum: \u001b[38;5;28mstr\u001b[39m = \u001b[43mread_lorem_ipsum_text\u001b[49m()\n\u001b[32m     16\u001b[39m debates_xml: \u001b[38;5;28mstr\u001b[39m = read_xml()\n\u001b[32m     18\u001b[39m \u001b[38;5;28mprint\u001b[39m(loremipsum)\n",
+      "\u001b[31mNameError\u001b[39m: name 'read_lorem_ipsum_text' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#\n",
     "# Part 1\n",
@@ -423,7 +434,9 @@
     "# Example:\n",
     "loremipsum: str = read_lorem_ipsum_text()\n",
     "\n",
-    "# TODO - ADD YOUR OTHER CODE HERE"
+    "debates_xml: str = read_xml()\n",
+    "\n",
+    "print(loremipsum)"
    ]
   },
   {
@@ -459,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +557,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "docana_3_9",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -558,7 +571,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.17"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
