--- a/Uni_Konstanz/Document Analysis/Lecture 2 + Ex 2/ex02/ex02_assignment.ipynb
+++ b/Uni_Konstanz/Document Analysis/Lecture 2 + Ex 2/ex02/ex02_assignment.ipynb
@@ -83,10 +83,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "d48b5e71-e2ed-4b57-af65-f352d0873632",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package brown to\n",
+      "[nltk_data]     C:\\Users\\bagim\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Unzipping corpora\\brown.zip.\n"
+     ]
+    }
+   ],
    "source": [
     "import nltk\n",
     "nltk.download('brown')\n",
@@ -95,12 +105,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "5bfca02e-0ed1-46ca-a0e7-b37b819d7c45",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('The', 'AT'), ('Fulton', 'NP-TL'), ('County', 'NN-TL'), ('Grand', 'JJ-TL'), ('Jury', 'NN-TL'), ('said', 'VBD'), ('Friday', 'NR'), ('an', 'AT'), ('investigation', 'NN'), ('of', 'IN'), (\"Atlanta's\", 'NP$'), ('recent', 'JJ'), ('primary', 'NN'), ('election', 'NN'), ('produced', 'VBD'), ('``', '``'), ('no', 'AT'), ('evidence', 'NN'), (\"''\", \"''\"), ('that', 'CS')]\n",
+      "[('The', 'UNK'), ('Fulton', 'UNK'), ('County', 'UNK'), ('Grand', 'UNK'), ('Jury', 'UNK'), ('said', 'UNK'), ('Friday', 'UNK'), ('an', 'UNK'), ('investigation', 'UNK'), ('of', 'UNK')]\n"
+     ]
+    }
+   ],
    "source": [
-    "# CODE SUBMISSION ANSWER HERE (Double click to edit)"
+    "print(brown.tagged_words()[:20])\n",
+    "print(brown.tagged_words(tagset= \"news\")[:10])"
    ]
   },
   {
@@ -151,10 +171,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "65a5acd4-6ab3-494b-a08b-6992b2a0919a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package brown to\n",
+      "[nltk_data]     C:\\Users\\bagim\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package brown is already up-to-date!\n",
+      "[nltk_data] Downloading package treebank to\n",
+      "[nltk_data]     C:\\Users\\bagim\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Unzipping corpora\\treebank.zip.\n"
+     ]
+    }
+   ],
    "source": [
     "import nltk\n",
     "nltk.download('brown')\n",
@@ -165,22 +198,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "8d492dec-b7b7-4c86-92e8-f3873221dff3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Pierre', 'Vinken', ',', '61', 'years', 'old', ',', 'will', 'join', 'the', 'board', 'as', 'a', 'nonexecutive', 'director', 'Nov.', '29', '.', 'Mr.', 'Vinken']\n"
+     ]
+    }
+   ],
    "source": [
-    "treebank_test = list(nltk.corpus.treebank.words()[0:20])"
+    "treebank_test = list(nltk.corpus.treebank.words()[0:20])\n",
+    "print(treebank_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "cd7eed60-2a56-4ce9-a0af-cae2eccb987a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "not enough values to unpack (expected 2, got 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[26]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[43mUnigramTagger\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtreebank_test\u001b[49m\u001b[43m)\u001b[49m)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\nltk\\tag\\sequential.py:363\u001b[39m, in \u001b[36mUnigramTagger.__init__\u001b[39m\u001b[34m(self, train, model, backoff, cutoff, verbose)\u001b[39m\n\u001b[32m    362\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, train=\u001b[38;5;28;01mNone\u001b[39;00m, model=\u001b[38;5;28;01mNone\u001b[39;00m, backoff=\u001b[38;5;28;01mNone\u001b[39;00m, cutoff=\u001b[32m0\u001b[39m, verbose=\u001b[38;5;28;01mFalse\u001b[39;00m):\n\u001b[32m--> \u001b[39m\u001b[32m363\u001b[39m     \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m.\u001b[49m\u001b[34;43m__init__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[32;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtrain\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbackoff\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcutoff\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mverbose\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\nltk\\tag\\sequential.py:296\u001b[39m, in \u001b[36mNgramTagger.__init__\u001b[39m\u001b[34m(self, n, train, model, backoff, cutoff, verbose)\u001b[39m\n\u001b[32m    293\u001b[39m \u001b[38;5;28msuper\u001b[39m().\u001b[34m__init__\u001b[39m(model, backoff)\n\u001b[32m    295\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m train:\n\u001b[32m--> \u001b[39m\u001b[32m296\u001b[39m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_train\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtrain\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcutoff\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mverbose\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\nltk\\tag\\sequential.py:179\u001b[39m, in \u001b[36mContextTagger._train\u001b[39m\u001b[34m(self, tagged_corpus, cutoff, verbose)\u001b[39m\n\u001b[32m    177\u001b[39m fd = ConditionalFreqDist()\n\u001b[32m    178\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m sentence \u001b[38;5;129;01min\u001b[39;00m tagged_corpus:\n\u001b[32m--> \u001b[39m\u001b[32m179\u001b[39m     tokens, tags = \u001b[38;5;28mzip\u001b[39m(*sentence)\n\u001b[32m    180\u001b[39m     \u001b[38;5;28;01mfor\u001b[39;00m index, (token, tag) \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(sentence):\n\u001b[32m    181\u001b[39m         \u001b[38;5;66;03m# Record the event.\u001b[39;00m\n\u001b[32m    182\u001b[39m         token_count += \u001b[32m1\u001b[39m\n",
+      "\u001b[31mValueError\u001b[39m: not enough values to unpack (expected 2, got 1)"
+     ]
+    }
+   ],
    "source": [
-    "# CODE SUBMISSION ANSWER HERE (Double click to edit)"
+    "print(UnigramTagger(treebank_test))"
    ]
   },
   {
@@ -430,7 +487,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -444,7 +501,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.9"
   },
   "pycharm": {
    "stem_cell": {
