--- a/Uni_Konstanz/Document Analysis/Lecture 2 + Ex 2/ex02/ex02_assignment.ipynb
+++ b/Uni_Konstanz/Document Analysis/Lecture 2 + Ex 2/ex02/ex02_assignment.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "d48b5e71-e2ed-4b57-af65-f352d0873632",
    "metadata": {},
    "outputs": [
@@ -93,7 +93,7 @@
      "text": [
       "[nltk_data] Downloading package brown to\n",
       "[nltk_data]     C:\\Users\\bagim\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Unzipping corpora\\brown.zip.\n"
+      "[nltk_data]   Package brown is already up-to-date!\n"
      ]
     }
    ],
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "5bfca02e-0ed1-46ca-a0e7-b37b819d7c45",
    "metadata": {},
    "outputs": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 33,
    "id": "65a5acd4-6ab3-494b-a08b-6992b2a0919a",
    "metadata": {},
    "outputs": [
@@ -184,7 +184,7 @@
       "[nltk_data]   Package brown is already up-to-date!\n",
       "[nltk_data] Downloading package treebank to\n",
       "[nltk_data]     C:\\Users\\bagim\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Unzipping corpora\\treebank.zip.\n"
+      "[nltk_data]   Package treebank is already up-to-date!\n"
      ]
     }
    ],
@@ -192,52 +192,41 @@
     "import nltk\n",
     "nltk.download('brown')\n",
     "nltk.download('treebank')\n",
-    "from nltk.corpus import brown\n",
+    "from nltk.corpus import brown, treebank\n",
     "from nltk.tag import UnigramTagger"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 36,
    "id": "8d492dec-b7b7-4c86-92e8-f3873221dff3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "treebank_test = list(nltk.corpus.treebank.words()[0:20])\n",
+    "train_sents_brown = brown.tagged_sents(categories='news', tagset='brown')\n",
+    "unigram_brown = UnigramTagger(train_sents_brown)\n",
+    "train_sents_penn = treebank.tagged_sents()\n",
+    "unigram_penn = UnigramTagger(train_sents_penn)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cd7eed60-2a56-4ce9-a0af-cae2eccb987a",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Pierre', 'Vinken', ',', '61', 'years', 'old', ',', 'will', 'join', 'the', 'board', 'as', 'a', 'nonexecutive', 'director', 'Nov.', '29', '.', 'Mr.', 'Vinken']\n"
+      "[('Pierre', 'NP'), ('Vinken', None), (',', ','), ('61', 'CD'), ('years', 'NNS'), ('old', 'JJ'), (',', ','), ('will', 'MD'), ('join', 'VB'), ('the', 'AT'), ('board', 'NN'), ('as', 'CS'), ('a', 'AT'), ('nonexecutive', None), ('director', 'NN'), ('Nov.', 'NP'), ('29', 'CD'), ('.', '.'), ('Mr.', 'NP'), ('Vinken', None)]\n",
+      "[('Pierre', 'NNP'), ('Vinken', 'NNP'), (',', ','), ('61', 'CD'), ('years', 'NNS'), ('old', 'JJ'), (',', ','), ('will', 'MD'), ('join', 'VB'), ('the', 'DT'), ('board', 'NN'), ('as', 'IN'), ('a', 'DT'), ('nonexecutive', 'JJ'), ('director', 'NN'), ('Nov.', 'NNP'), ('29', 'CD'), ('.', '.'), ('Mr.', 'NNP'), ('Vinken', 'NNP')]\n"
      ]
     }
    ],
    "source": [
-    "treebank_test = list(nltk.corpus.treebank.words()[0:20])\n",
-    "print(treebank_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "cd7eed60-2a56-4ce9-a0af-cae2eccb987a",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "not enough values to unpack (expected 2, got 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[26]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[43mUnigramTagger\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtreebank_test\u001b[49m\u001b[43m)\u001b[49m)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\nltk\\tag\\sequential.py:363\u001b[39m, in \u001b[36mUnigramTagger.__init__\u001b[39m\u001b[34m(self, train, model, backoff, cutoff, verbose)\u001b[39m\n\u001b[32m    362\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, train=\u001b[38;5;28;01mNone\u001b[39;00m, model=\u001b[38;5;28;01mNone\u001b[39;00m, backoff=\u001b[38;5;28;01mNone\u001b[39;00m, cutoff=\u001b[32m0\u001b[39m, verbose=\u001b[38;5;28;01mFalse\u001b[39;00m):\n\u001b[32m--> \u001b[39m\u001b[32m363\u001b[39m     \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m.\u001b[49m\u001b[34;43m__init__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[32;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtrain\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbackoff\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcutoff\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mverbose\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\nltk\\tag\\sequential.py:296\u001b[39m, in \u001b[36mNgramTagger.__init__\u001b[39m\u001b[34m(self, n, train, model, backoff, cutoff, verbose)\u001b[39m\n\u001b[32m    293\u001b[39m \u001b[38;5;28msuper\u001b[39m().\u001b[34m__init__\u001b[39m(model, backoff)\n\u001b[32m    295\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m train:\n\u001b[32m--> \u001b[39m\u001b[32m296\u001b[39m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_train\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtrain\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcutoff\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mverbose\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\nltk\\tag\\sequential.py:179\u001b[39m, in \u001b[36mContextTagger._train\u001b[39m\u001b[34m(self, tagged_corpus, cutoff, verbose)\u001b[39m\n\u001b[32m    177\u001b[39m fd = ConditionalFreqDist()\n\u001b[32m    178\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m sentence \u001b[38;5;129;01min\u001b[39;00m tagged_corpus:\n\u001b[32m--> \u001b[39m\u001b[32m179\u001b[39m     tokens, tags = \u001b[38;5;28mzip\u001b[39m(*sentence)\n\u001b[32m    180\u001b[39m     \u001b[38;5;28;01mfor\u001b[39;00m index, (token, tag) \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(sentence):\n\u001b[32m    181\u001b[39m         \u001b[38;5;66;03m# Record the event.\u001b[39;00m\n\u001b[32m    182\u001b[39m         token_count += \u001b[32m1\u001b[39m\n",
-      "\u001b[31mValueError\u001b[39m: not enough values to unpack (expected 2, got 1)"
-     ]
-    }
-   ],
-   "source": [
-    "print(UnigramTagger(treebank_test))"
+    "print(unigram_brown.tag(treebank_test))"
    ]
   },
   {
@@ -260,12 +249,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "170ceed1-3121-4580-b277-223c381167ff",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('Pierre', 'NNP'), ('Vinken', 'NNP'), (',', ','), ('61', 'CD'), ('years', 'NNS'), ('old', 'JJ'), (',', ','), ('will', 'MD'), ('join', 'VB'), ('the', 'DT'), ('board', 'NN'), ('as', 'IN'), ('a', 'DT'), ('nonexecutive', 'JJ'), ('director', 'NN'), ('Nov.', 'NNP'), ('29', 'CD'), ('.', '.'), ('Mr.', 'NNP'), ('Vinken', 'NNP')]\n"
+     ]
+    }
+   ],
    "source": [
-    "# CODE SUBMISSION ANSWER HERE (Double click to edit)"
+    "# CODE SUBMISSION ANSWER HERE (Double click to edit)\n",
+    "print(unigram_penn.tag(treebank_test))\n"
    ]
   },
   {
@@ -295,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "f3f019a5-0973-4268-bc65-e819a1722be6",
    "metadata": {},
    "outputs": [],
@@ -307,24 +305,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "id": "2c764526-7add-4c98-b216-fb57e9a8fb48",
    "metadata": {},
    "outputs": [],
    "source": [
     "n_cutoff = 20000\n",
     "brown_sents_train = brown.tagged_sents()[0:n_cutoff] # training corpus\n",
-    "brown_sents_test = brown.tagged_sents()[n_cutoff:] # reference corpus"
+    "brown_sents_test = brown.tagged_sents()[n_cutoff:] # reference corpus\n",
+    "unigram_brown_1 = UnigramTagger(brown_sents_train)\n",
+    "bigram_brown_1 = BigramTagger(brown_sents_train)\n",
+    "trainer = BrillTaggerTrainer(initial_tagger=unigram_brown_1, templates=brill24())\n",
+    "brill_tagger = trainer.train(brown_sents_train, max_rules=200)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "id": "c2e1d093-a53c-45dc-b4c5-78b20afb3bc8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('Pierre', 'NP'), ('Vinken', None), (',', ','), ('61', 'CD'), ('years', 'NNS'), ('old', 'JJ'), (',', ','), ('will', 'MD'), ('join', 'VB'), ('the', 'AT'), ('board', 'NN'), ('as', 'CS'), ('a', 'AT'), ('nonexecutive', None), ('director', 'NN'), ('Nov.', 'NP'), ('29', 'CD'), ('.', '.'), ('Mr.', 'NP'), ('Vinken', None)]\n"
+     ]
+    }
+   ],
    "source": [
-    "# CODE SUBMISSION ANSWER HERE (Double click to edit)"
+    "# CODE SUBMISSION ANSWER HERE (Double click to edit)\n",
+    "\n",
+    "\n",
+    "print(brill_tagger.tag(treebank_test))\n"
    ]
   },
   {
@@ -414,10 +427,10 @@
    "id": "ecc77aa4-789e-4483-8656-0a2296e8058a",
    "metadata": {},
    "source": [
-    "<font color='ff000000'>\\# TEXT SUBMISSION ANSWER HERE (Double click to edit) - write down the steps for calculating the most likely POS tag</font>\n",
+    "p (k = NN| raise) = 2/3\n",
+    "p (k = VB| raise) = 1/3 \n",
     "\n",
-    "\n",
-    "\n"
+    "=> NN"
    ]
   },
   {
@@ -438,7 +451,10 @@
    "id": "9aba02ef-c4e1-4ede-aa3a-b03c92aa5f33",
    "metadata": {},
    "source": [
-    "<font color='ff000000'>\\# TEXT SUBMISSION ANSWER HERE (Double click to edit) - write down the steps for calculating the most likely POS tag</font>"
+    "<font color='ff000000'>\\# TEXT SUBMISSION ANSWER HERE (Double click to edit) - write down the steps for calculating the most likely POS tag</font>\n",
+    "\n",
+    "p (k = NN| raise) = p (k = NN | TO) * p (k = NN| raise) = 0 * 2/3 = 0\n",
+    "p (k = VB| raise) = p (k = VB | TO) * p (k = VB| raise) = 1/1 * 1/3 = 1/3"
    ]
   },
   {
