DocAna: Ex 3 update

--- a/Uni_Konstanz/Document Analysis/Lecture 3 + Ex 3/Ex3/ex03_assignment.ipynb
+++ b/Uni_Konstanz/Document Analysis/Lecture 3 + Ex 3/Ex3/ex03_assignment.ipynb
@@ -87,14 +87,37 @@
    "id": "00a747f2-f36a-4004-9e71-cc5f5b4ff6f0",
    "metadata": {},
    "source": [
+    "The angry bear chased the frightened little squirrel.          \n",
+    "                S____________\n",
+    "               /             \\\n",
+    "              NP_            VP___          \n",
+    "             /   \\          /     \\ \n",
+    "           Det   Nom       V      NP________\n",
+    "            |   /   \\      |     /          \\\n",
+    "            |  Adj   N     |   Det         Nom____\n",
+    "            |   |    |     |    |         /       \\\n",
+    "            |   |    |     |    |        Adj     Nom\n",
+    "            |   |    |     |    |         |     /   \\\n",
+    "            |   |    |     |    |         |    Adj   N\n",
+    "            |   |    |     |    |         |     |    |\n",
+    "           The angry bear chased the    frightened little squirrel   \n",
     "\n",
-    "                |\n",
-    "                |\n",
-    "                |\n",
-    "                VB\n",
-    "                |\n",
-    "                /\\\n",
-    "               |  |"
+    "The dog saw a man in the park.\n",
+    "\n",
+    "                S____________\n",
+    "               /             \\\n",
+    "              NP_            VP___          \n",
+    "             /   \\          /     \\ \n",
+    "           Det   N         V      NP________\n",
+    "            |    |         |     /          \\\n",
+    "            |    |         |    NP          PP\n",
+    "            |    |         |   /  \\        /  \\ \n",
+    "            |    |         |  Det  N      P   NP\n",
+    "            |    |         |   |   |      |   /  \\\n",
+    "            |    |         |   |   |      |  Det N\n",
+    "            |    |         |   |   |      |   |  |   \n",
+    "\n",
+    "           The dog        saw  a  man     in the park"
    ]
   },
   {
@@ -110,7 +133,9 @@
    "id": "e3f12b01-aebd-47d2-8dcd-1d7572f16994",
    "metadata": {},
    "source": [
-    "<font color='ff000000'>\\# TEXT SUBMISSION ANSWER HERE (Double click to edit) - approx. 50-100 words on pro/cons</font>"
+    "<font color='ff000000'>\\# TEXT SUBMISSION ANSWER HERE (Double click to edit) - approx. 50-100 words on pro/cons</font>\n",
+    "\n",
+    "Pros: Takes a lot of time to build such tree, some of the grammar might lead to a wrong parsing. Need good grammar. Cons: Easy in use. Well structured output."
    ]
   },
   {
