DocAna: Ex 3 done

--- a/Uni_Konstanz/Document Analysis/Lecture 3 + Ex 3/Ex3/ex03_assignment.ipynb
+++ b/Uni_Konstanz/Document Analysis/Lecture 3 + Ex 3/Ex3/ex03_assignment.ipynb
@@ -133,7 +133,7 @@
    "id": "e3f12b01-aebd-47d2-8dcd-1d7572f16994",
    "metadata": {},
    "source": [
-    "<font color='ff000000'>\\# TEXT SUBMISSION ANSWER HERE (Double click to edit) - approx. 50-100 words on pro/cons</font>\n",
+    "\n",
     "\n",
     "Pros: Takes a lot of time to build such tree, some of the grammar might lead to a wrong parsing. Need good grammar. Cons: Easy in use. Well structured output."
    ]
@@ -172,7 +172,8 @@
    "id": "4635bf5a-b112-46ea-8f5e-d05c57bb30af",
    "metadata": {},
    "source": [
-    "<font color='ff000000'>\\# TEXT SUBMISSION ANSWER HERE (Double click to edit) </font>"
+    "Need a binarized grammar\n",
+    "The grammar must be in Chomsky Normal Form"
    ]
   },
   {
@@ -191,7 +192,7 @@
    "id": "6d5c837b-0c68-4658-b979-6977a4c2da12",
    "metadata": {},
    "source": [
-    "<font color='ff000000'>\\# TEXT SUBMISSION ANSWER HERE (Double click to edit) </font>"
+    "Because when we apply CKY, it should be systematically and efficiently fill its parsing table by checking pairs of nonterminals over substrings."
    ]
   },
   {
@@ -218,7 +219,16 @@
    "id": "0a0d6fb5-5c3a-4f7f-a243-f015ef68e28f",
    "metadata": {},
    "source": [
-    "<font color='ff000000'>\\# TEXT SUBMISSION ANSWER HERE (Double click to edit) </font>"
+    "- S -> NP VP\n",
+    "- NP -> Noun PP \n",
+    "- VP -> Verb X\n",
+    "- X -> Verb NP\n",
+    "- VP -> NP PP\n",
+    "- PP -> Prep Adj\n",
+    "- Noun -> ‘John‘ | ‘Mary‘\n",
+    "- Verb -> ‘led‘\n",
+    "- Prep -> ‘with‘\n",
+    "- Adj -> care"
    ]
   },
   {
@@ -267,7 +277,14 @@
    "id": "9166cc52-2ca4-4aef-841c-9c026b84d3ad",
    "metadata": {},
    "source": [
-    "<font color='ff000000'>\\# TEXT SUBMISSION ANSWER HERE (Double click to edit) - We expect the filled CYK table</font>"
+    "The Det         NP                          S                S\n",
+    "    angry Adj  Nom        \n",
+    "            bear N\n",
+    "                    chased  V              VP                S\n",
+    "                            the Det                         NP\n",
+    "                                frightened Adj              Nom        \n",
+    "                                            little Adj      Nom\n",
+    "                                                    squirrel N"
    ]
   },
   {
