DocAna: Ex 4 update

--- a/Uni_Konstanz/Document Analysis/Lecture 4 + Ex 4/ex04/ex04_assignment.ipynb
+++ b/Uni_Konstanz/Document Analysis/Lecture 4 + Ex 4/ex04/ex04_assignment.ipynb
@@ -73,7 +73,9 @@
             "id": "50419894",
             "metadata": {},
             "source": [
-                "<font color='ff000000'>\\# TEXT SUBMISSION ANSWER HERE (Double click to edit)</font>"
+                "1. Because some of the words have more than one POS-tag(Heteronims)\n",
+                "2. To predict a POS-tag we need not only statical algorithms, but more advanced\n",
+                "3. If a corpus don't have enough words, than it will be bad trained (Unigramm, Bigramm)"
             ]
         },
         {
@@ -97,7 +99,7 @@
             "id": "f981b551",
             "metadata": {},
             "source": [
-                "<font color='ff000000'>\\# TEXT SUBMISSION ANSWER HERE (Double click to edit)</font>"
+                "Tokenization is a process of breaking text into smaller units called tokens(typically words, subwords, or punctuation marks), which serve as the basic elements for further NLP tasks."
             ]
         },
         {
@@ -121,7 +123,9 @@
             "id": "41b7096e",
             "metadata": {},
             "source": [
-                "<font color='ff000000'>\\# TEXT SUBMISSION ANSWER HERE (Double click to edit)</font>"
+                "Word stem is the core part of a word that remains after removing inflectional or derivational affixes.\n",
+                "\n",
+                "Undoes -> Undo"
             ]
         },
         {
@@ -145,7 +149,9 @@
             "id": "d70dbb28",
             "metadata": {},
             "source": [
-                "<font color='ff000000'>\\# TEXT SUBMISSION ANSWER HERE (Double click to edit)</font>"
+                "Lemma is a canonical or dictionary from of a word - the form like in dictionary.\n",
+                "\n",
+                "Undoes -> Undo"
             ]
         },
         {
@@ -171,7 +177,11 @@
             "id": "26f7007f",
             "metadata": {},
             "source": [
-                "<font color='ff000000'>\\# TEXT SUBMISSION ANSWER HERE (Double click to edit)</font>"
+                "Because they might help us to filter texts or documents.\n",
+                "\n",
+                "They reduce vocabulary size and helps algorithms work more efficiently.\n",
+                "\n",
+                "Improves accuracy in tasks like information retrieval, classification, and clustering, because semantically related forms are grouped together."
             ]
         },
         {
@@ -195,7 +205,7 @@
             "id": "03de88c4",
             "metadata": {},
             "source": [
-                "<font color='ff000000'>\\# TEXT SUBMISSION ANSWER HERE (Double click to edit)</font>"
+                "Stop-words are frequent dunction words (like  the, is, and). We remove them to reduce noise, vocabulary size, and improves efficiency and accuracy of text analysis.\n"
             ]
         },
         {
@@ -219,7 +229,7 @@
             "id": "7c1dced2",
             "metadata": {},
             "source": [
-                "<font color='ff000000'>\\# TEXT SUBMISSION ANSWER HERE (Double click to edit)</font>"
+                "We can make a list of stop words, by using Zipf's Law"
             ]
         },
         {
@@ -243,7 +253,7 @@
             "id": "c58bbb6d",
             "metadata": {},
             "source": [
-                "<font color='ff000000'>\\# TEXT SUBMISSION ANSWER HERE (Double click to edit)</font>"
+                "POS-tagging"
             ]
         },
         {
@@ -267,7 +277,7 @@
             "id": "85c19281",
             "metadata": {},
             "source": [
-                "<font color='ff000000'>\\# TEXT SUBMISSION ANSWER HERE (Double click to edit)</font>"
+                "Part-of-speech tagging is proccess of assinging tags(grammatical categories) to words. It is useful for future text/senctece processing like Named-Entity-recognition"
             ]
         },
         {
@@ -291,7 +301,7 @@
             "id": "7423a5e0",
             "metadata": {},
             "source": [
-                "<font color='ff000000'>\\# TEXT SUBMISSION ANSWER HERE (Double click to edit)</font>"
+                "N-gram tagging uses statistical approach to tag words depending on previous corpus. Limitation is that, without previous context and without backoff stategy it woeks bad. "
             ]
         },
         {
@@ -315,7 +325,7 @@
             "id": "912f9049",
             "metadata": {},
             "source": [
-                "<font color='ff000000'>\\# TEXT SUBMISSION ANSWER HERE (Double click to edit)</font>"
+                "Parsing is an algorithm of building a syntactical structure of a senctece with the respect of given grammar. Two types are Bottom-up and Top-down approaches."
             ]
         },
         {
@@ -339,7 +349,8 @@
             "id": "6c5d2b06",
             "metadata": {},
             "source": [
-                "<font color='ff000000'>\\# TEXT SUBMISSION ANSWER HERE (Double click to edit)</font>"
+                "CFL vs CSL: Context-sensitive rules allow rewiriting depending on surrounding symbols; they generate a larger class of languages \\\n",
+                "CFL vs Regular: Regular languages are simple(no recursion); all regular languages are CFLs, but not all CFLs are regular. "
             ]
         },
         {
@@ -363,7 +374,10 @@
             "id": "a072fc99",
             "metadata": {},
             "source": [
-                "<font color='ff000000'>\\# TEXT SUBMISSION ANSWER HERE (Double click to edit)</font>"
+                "G = (N, T, P, S) \\\n",
+                "N = {S, A, B, C} \\\n",
+                "T = {a,b,c} \\\n",
+                "P = {S->ABC, A->a, B->b, C->c} \\"
             ]
         },
         {
