Crypto: Ex03 done

--- a/Uni_Konstanz/Intoduction to Cryptography/Lecture 2 + Ex 2 + 3/ex03.md
+++ b/Uni_Konstanz/Intoduction to Cryptography/Lecture 2 + Ex 2 + 3/ex03.md
@@ -1,6 +1,6 @@
+# SOL 3
 
-
-# Ex 01
+## Ex 01
 
 (a). So if Vigenere cipher using period t, was used to length t, and when the key is used once.
 
@@ -14,7 +14,7 @@ if |K| < |M| than there is some m' ∈ M such that m′ !∈ M(c). But then
 
 Pr[M = m' | C = c] = 0 != 1/|M| = Pr[M = m']
 
-# Ex 02
+## Ex 02
 
 By redefining key space k ∈ {k1,k2,...,k_n} , m ∈ M
 
@@ -26,3 +26,18 @@ Pr[C = c] = 1/(n^2)
 
 Pr[C = c | M = m] = 1/n so it was not changed
 
+## Ex 3
+
+Pr[K1] = Pr[K2] = Pr[K3] = α/3
+
+Pr[K4] = Pr[K5] = β/2
+
+Pr[m = a | c = 1] =  Pr[m = a | c = 2] =  Pr[m = 3 | c = 3] = Pr[m = b | c = 2] =  Pr[m = b | c = 3] =  Pr[m = b | c = 1] = α/3
+
+Pr[m = a | c = 4] =  Pr[m = a | c = 5] = Pr[m = b | c = 5] =  Pr[m = b | c = 4] = β/2
+
+Pr[K = k] = 1/5
+
+Pr[C = c] = 1/5
+
+So the scheme is perfectly secret.
