Crypto: Ex05 update

--- a/Uni_Konstanz/Intoduction to Cryptography/Lecture 3 + Ex4 + 5/Ex05.md
+++ b/Uni_Konstanz/Intoduction to Cryptography/Lecture 3 + Ex4 + 5/Ex05.md
@@ -2,3 +2,18 @@
 
 # Ex01
 
+F : {0, 1}^n × {0, 1} ^ n → {0, 1} ^ (ℓ(n))
+F': {0, 1}^n × {0, 1} ^ (n - 1) → {0, 1} ^ (2 * ℓ(n))
+
+(a) F'_k(x) := Fk(0||x) || Fk(0||x)
+
+which ever x we decide to pick, right and left sides of F'_k(x) will be the same, so it's not a PRG
+
+(b) F′_k(x) := Fk(0||x) || Fk(x||0).
+
+if x = 0^(n-1), than again we get two same sides of function F'k
+
+
+# Ex02
+
+F : {0, 1} ^ n × {0, 1} ^ n → {0, 1} ^ n
