Docana: Ex06 update

--- a/Uni_Konstanz/Document Analysis/Lecture 6 + Ex6/ex06_assignment.ipynb
+++ b/Uni_Konstanz/Document Analysis/Lecture 6 + Ex6/ex06_assignment.ipynb
@@ -55,7 +55,8 @@
                 }
             },
             "source": [
-                "<font color='ff000000'>\\# TEXT SUBMISSION ANSWER HERE (Double click to edit) </font>"
+                "CBOW is a type of training in which computer learn to predict a missing word. \\\n",
+                "Skip-gram is training in which computer tries to predict the context.\n"
             ]
         },
         {
@@ -81,7 +82,48 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "<font color='ff000000'>\\# TEXT SUBMISSION ANSWER HERE (Double click to edit) </font>"
+                "You shall know a word by the company it keeps\n",
+                "\n",
+                "a) \n",
+                "\n",
+                "input       output\n",
+                "\n",
+                "word        the\n",
+                "\n",
+                "by          the \n",
+                "\n",
+                "company     the \n",
+                "\n",
+                "it          the\n",
+                "\n",
+                "by          company\n",
+                "\n",
+                "the         company\n",
+                "\n",
+                "it          company\n",
+                "\n",
+                "keeps       company\n",
+                "\n",
+                "\n",
+                "b)\n",
+                "\n",
+                "input       output\n",
+                "\n",
+                "shall       a\n",
+                "\n",
+                "know        a\n",
+                "\n",
+                "word        a\n",
+                "\n",
+                "by          a\n",
+                "\n",
+                "know        a\n",
+                "\n",
+                "a           a\n",
+                "\n",
+                "by          a\n",
+                "\n",
+                "the         a\n"
             ]
         },
         {
@@ -111,7 +153,9 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "<font color='ff000000'>\\# TEXT SUBMISSION ANSWER HERE (Double click to edit) </font>"
+                "apple/boat = (1 * 6 + 5 * 1 +  3 * 8 + 3 * 4 + 2 * 2) / (1 + 25 + 9 + 9 + 4)^0.5 * (36 + 1 + 64 + 16 + 4) = (51)/ (48 * 121)^0.5 \n",
+                "\n",
+                "orange / boat = (2 * 6 + 5 * 1 + 2 * 8 + 4 * 4 + 4)/ (4 + 25 + 4 + 16 + 5)^0.5 * (121) ^ 0.5 = (53) / (54 * 121)^ 0.5 "
             ]
         },
         {
@@ -133,7 +177,10 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "<font color='ff000000'>\\# TEXT SUBMISSION ANSWER HERE (Double click to edit) </font>"
+                "1) Better semantical search (synonyms: car, automobile)\n",
+                "2) Better IR search: doctor, also psysician\n",
+                "3) Clustering in semantical groups\n",
+                "4) Pos-tag, NER, machine translation, also use it "
             ]
         },
         {
